--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node src/app.js --watch",
+    "dev": "node --watch src/app.js",
     "start": "node src/app.js",
     "test": "vitest"
   },
